# readme-gen

./: Cargo.toml  README.md
src/: explorer.rs  llm.rs  main.rs  summarizer.rs
