[package]
name = "readme-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2", features = ["full"] }
quote = "1.0"
serde_json = "1.0"
proc-macro2 = "1.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"]}